# nebula-media

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
benchmarks/jellyfish/: README.md  results.md  source.md
docs/: README.md  benchmarks.md  faq.md  methodology.md  overview.md  pricing.md  web0.md
nebula/: __init__.py  cursor_track.py  encoder.py  metrics.py  page.py  quality_commitment.py  receipt.py  screen_codec.py  web0.py
pipelines/: audio_pipeline.sh  av1_pipeline.sh  image_pipeline.sh
proof-pack/: README.md  encode_jellyfish_safe.sh  encode_kodak_images.sh
proof-pack/results/: jellyfish_safe_expected.json  kodak_images_expected.json
proof-pack/sources/: SOURCES.md
sales/: nebula-enterprise-one-pager.md  nebula-investor-comparison.md
scripts/: check.sh
tests/: test_image_web0.py  test_page.py
tools/: verify_media.sh  verify_proof.sh  vmaf_check.sh
