[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-media"
version = "0.2.0"
description = "Perceptual media re-encoding for Web0: scene-aware video, AVIF images, .null page mode. On-chain quality proofs via DNA x402."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Parad0x Labs", email = "labs@parad0x.io" }]
keywords = ["video", "image", "avif", "ffmpeg", "vmaf", "ssim", "encoding", "x265", "av1", "arweave", "web0", "solana", "x402"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "pydantic>=2.0,<3.0",
  "click>=8.1,<9.0",
  "rich>=13.0,<14.0",
  "scipy>=1.10",
  "numpy>=1.24",
  "psutil>=5.9",
  "pillow>=11.3",   # AVIF encode/decode (libavif wheels) — image + page modes
]

[project.optional-dependencies]
solana = ["solana>=0.34", "solders>=0.21", "base58>=2.1"]
dev    = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage   = "https://github.com/Parad0x-Labs/nebula-media"
Repository = "https://github.com/Parad0x-Labs/nebula-media"
"DNA x402" = "https://github.com/Parad0x-Labs/dna-x402"
Liquefy    = "https://github.com/Parad0x-Labs/liquefy"

[project.scripts]
nebula      = "nebula.encoder:main"
nebula-web0 = "nebula.web0:main"
nebula-page = "nebula.page:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nebula*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
